[package]
name = "wasm-sesskey"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
rand_core = "0.6.4"
reqwest = "0.12.15"
rsa = "0.9.8"
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
